# safe-cpp

./: .gitignore  CMakeLists.txt  README.md  TODO.md  reference.md  tutorial.md
include/safe/: borrow.hpp  config.hpp  container.hpp  exceptions.hpp  fwd.hpp  lifetime.hpp  lock.hpp  notnull.hpp  ptr.hpp  ref.hpp  safe.hpp  string.hpp  value.hpp  vector.hpp
test/: benchmark.cpp  main.cpp  test.hpp  throws.hpp  tutorial.cpp  unsafe.cpp
